--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@
 }
 
 body{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
 }
 
 .box{
@@ -16,7 +18,7 @@ body{
     flex-direction: row;
     max-width: 500px;
     width: 100%;
-    height: 400px;
+    height: 100%;
     border-radius: 0.5rem;
     box-shadow: 8px 8px 11px 0px #f0f0f0;
 }
@@ -27,8 +29,16 @@ body{
     align-items: center;
     flex-direction: column;
     height: 100%;
-    border-radius: 0.5rem;
+    width: 100%;
+    padding: 1rem 1rem 0rem 1rem;
+    border-radius: 1rem;
     background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+}
+
+.user_name{
+    color: hsl(246, 100%, 89%);
+    font-weight: 600;
+    margin-top: 1rem;
 }
 
 .score{
@@ -36,7 +46,7 @@ body{
     align-items: center;
     flex-direction: column;
     gap: 1rem;
-    margin: 1rem;
+    margin: 0rem 0rem 0rem 0rem;
 }
 
 .user_score{
@@ -56,36 +66,44 @@ body{
 }
 
 .score_max{
-    font-size: 12px;
+    font-size: 18px;
+    color: hsl(0, 0%, 55%);
+}
+
+.certification{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 1rem;
+}
+
+.user_mention{
+    font-weight: 600;
+    font-size: 1.5rem;
 }
 
 .user_classement{
     text-align: center;
     margin-top: 0.7rem;
     height: 100%;
-    width: 100%;
-}
-
-.certification{
-    
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin: 1rem;
+    font-size: 0.75rem;
+    color: hsl(246, 100%, 89%);
 }
 
 .summary{
-    
     display: flex;
-    align-items: center;
     flex-direction: column;
     width: 100%;
     gap: 0.5rem;
-    margin: 1rem;
+    margin: 1rem 1rem 1rem 1rem;
 }
 
 .summary_title{
-    text-align: left;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    margin-bottom: 0.5rem;
+    font-weight: 800;
 }
 
 .category_score{
@@ -94,14 +112,8 @@ body{
     flex-direction: column;
     margin: 0;
     padding: 0;
-    width: 90%;
-    gap: 0.5rem;
-}
-
-.category_score:nth-child(1){
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+    width: 100%;
+    gap: 0.8rem;
 }
 
 .category_score li{
@@ -109,56 +121,66 @@ body{
     display: flex;
     align-items: center;
     flex-direction: row;
+    justify-content: space-between;
     border-radius: 0.5rem;
-
+    font-size: 0.7rem;
 }
-
-.reaction:nth-child(1) p {
-    color: hsl(0, 100%, 67%);
-}
-.reaction:nth-child(1){
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: hsla(0, 100%, 67%, 0.13);
-}
-
-.memory_title {
-    color: hsl(39, 100%, 56%);
-}
-.memory{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: hsla(39, 100%, 56%, 0.13);
-}
-
-.verbal_title {
-    color: hsl(166, 100%, 37%);
-}
-.verbal{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: hsla(166, 100%, 37%, 0.205);
-}
-
-.visual_title {
-    color: hsl(234, 85%, 45%);
-}
-.visual{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: hsla(234, 85%, 45%, 0.199);
-}
-
 
 .category_score li div:nth-child(1){
     display: flex;
     align-items: center;
     flex-direction: row;
-    margin: 0rem 1rem;
+    margin-left: 1rem;
+    font-size: 0.7rem;
+}
+
+.max_score{
+    color: rgb(156, 156, 156);
+    margin-right: 0.5rem;
+}
+
+.reaction_title {
+    color: hsl(0, 100%, 67%);
+    font-size: 0.8rem;
+}
+.reaction{
+    display: flex;
+    flex-direction: row;
+    font-weight: 600;
+    background-color: hsla(0, 100%, 67%, 0.1);
+}
+
+.memory_title {
+    color: hsl(39, 100%, 56%);
+    font-size: 0.8rem;
+}
+.memory{
+    display: flex;
+    flex-direction: row;
+    font-weight: 600;
+    background-color: hsla(39, 100%, 56%, 0.1);
+}
+ 
+.verbal_title {
+    color: hsl(166, 100%, 37%);
+    font-size: 0.8rem;
+}
+.verbal{
+    display: flex;
+    flex-direction: row;
+    font-weight: 600;
+    background-color: hsla(166, 100%, 37%, 0.1);
+}
+
+.visual_title {
+    color: hsl(234, 85%, 45%);
+    font-size: 0.8rem;
+}
+.visual{
+    display: flex;
+    flex-direction: row;
+    font-weight: 600;
+    background-color: hsla(234, 85%, 45%, 0.1);
 }
 
 .continue {
@@ -169,6 +191,7 @@ body{
     width: 100%;
     border-radius: 2rem;
     border: none;
+    margin-top: 1rem;
     padding: 1rem 0rem;
     text-align: center;
 }
@@ -181,9 +204,18 @@ body{
 
 
 
-/* @media screen and (max-width: 376px) {
-    .continue{
-        color: rgb(255, 255, 255);
-        background: linear-gradient(hsla(252, 100%, 67%), hsla(241, 81%, 54%));
+@media screen and (max-width: 376px) {
+    .box{
+        flex-direction: column;
     }
-  } */
+
+    .result{
+        border-top-left-radius: 0rem;
+        border-top-right-radius: 0rem;
+        padding: 0rem 0rem 0rem 0rem;
+    }
+
+    .summary{
+        width: 90%;
+    }
+  }
